<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenDataApplication</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="edit_text_confirm_password">Confirm Password</string>
    <string name="edit_text_search">Enter Keyword</string>
    <string name="btn_text_skip">Skip</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_register">Register</string>
    <string name="btn_txt_search">Search</string>
    <string name="btn_txt_logout">Logout</string>
    <string name="btn_txt_back">Back</string>
    <string name="btn_txt_savepage">Save Web Page</string>
    <string name="btn_txt_saveaspdf">Save As PDF</string>
    <string name="btn_txt_print">Print</string>
    <string name="btn_txt_emailpdf">Email PDF</string>
    <string name="btn_txt_change_profile">Change Profile</string>
    <string name="registration_screen_heading">Registration</string>
    <string name="login_screen_heading">Login</string>
    <string name="home_screen_heading">Home</string>
    <string name="search_screen_heading">Search</string>
    <string name="search_result_screen_heading">Search Result</string>
    <string name="Welcome_message">Welcome To Auto E-Filling Application </string>
    <string name="lbl_txt_searchfilter">Search Filter</string>
    <string name="radio_txt_district">District Level</string>
    <string name="radio_txt_national">National Level</string>
    <string name="hint_select_country">Select Country</string>
    <string name="hint_select_state">Select State</string>
    <string name="hint_select_district">Select District</string>
    <string name="hint_select_category">Select Category</string>
    <string name="editProfile_tag">Edit Profile</string>
    <string name="settings_tag">Settings</string>
    <string name="pdf_tag">viewPDF</string>
    <string name="createNewProfile_tag">CreateNewProfile</string>
    <string name="downloadedForm_tag">viewDownloadedForm</string>
    <string name="login_alert_error_heading">Error Message</string>
    <string name="no_forms_found">No forms found. Please try again.</string>
	<string name="no_user">Please enter username</string>
	<string name="no_password">Please enter password</string>
	<string name="no_confirm_password">Please enter confirm password</string>
	<string name="no_forms">No Forms found.</string>
	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="cancel">Cancel</string>
	<string name="no">NO</string>
	<string name="not_valid_crediantials">Wrong username or Password</string>
	<string name="Logout_string">Do you want to logout</string>
	<string name="save_data_option">Do you want to save data in selected profile </string>
	<string name="unable_to_save">Unable to save data because no profile found.</string>
	<string name="user_name_not_valid">User name should be greater than 4 characters</string>
	<string name="password_not_valid">Password should be greater than 4 characters</string>
	<string name="user_name_exist">User name already exists.</string>
	<string name="alert_title">Message</string>
	<string name="registered_successfully">User registered successfully</string>
	<string name="created_profile_successfully">Created Profile Successfully</string>
	<string name="profile_not_found_autofill">Profile Not Found For Autofill</string>
	<string name="updated_profile_successfully">Updated Profile Successfully</string>
	<string name="enter_profile_name">Please Enter Profile Name</string>
	<string name="password_mismatch">Password Mismatch</string>
    <string name="form_list_screen_heading">Form List</string>
	<string name="settings_title">Settings</string>
    <string name="back_button">Back</string>
    <string name="description">dropdown</string>
    <string name="profile">Default Profile</string>
    <string name="language">Default Language</string>
    <string name="password">Change Password</string>
    <string name="delete_acc">Delete My Account</string>
    <string name="delete_forms">Delete Forms</string>
    <string name="delete_profiles">Delete Profiles</string>
    <string name="prompt">Select Profile</string>
    <string name="prompt_language">Select Language</string>
    <string name="lang_value">English</string>
    <string name="hint_select_profile">Select Profile</string>
    <string name="profile_create">Create Profile</string>
    <string name="custom_view_heading">Select Profile</string>
    <string name="remove_profile_btn">Remove</string>
    <string name="submit">Submit</string>
    <string name="image_description">Nothing</string>
   
</resources>